# Audio-Recommendation-System

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
results/: leaderboard.csv
scripts/: demo.py  train_evaluate.py
src/: __init__.py
src/audio/: feature_extractor.py
src/data/: pipeline.py
src/evaluation/: metrics.py
src/models/: audio_recommenders.py
tests/: test_audio_recommendation.py
